v2.6
se agrega traducir mensaje cuando se muestra un mensaje. el mismo se traducirá al idioma del programa. por ejemplo si lo tenemos en inglés y nos llega un mensaje en español se traducirá al inglés.
ahora es posible saber cuantos mensajes llegaron al chat y ver quien fue el que mas habló. se a creado una lista donde aparece en orden de mayor a menor quien habló y cuantos mensajes envió y luego está un cuadro de texto donde nos dice el total de mensajes y el total de usuarios.
corrección de  bug donde se mezclaban los mensajes de los envivos pasados.
corrección de bug donde no se  inicialisaba el chat.
Se elimina la documentación. en cambio se crea una opción que permite acceder a la misma en línea. Para esto nos dirigimos al menú de mas opciones y luego al submenú ayuda.
se corrige bug del traductor y se lo agrega a twich
se agrupan varias opciones del chat en un menú contextual ,gracias Johan G.
v2.5
se mejora la función de buscar palabra entre los mensajes.
se soluciona bug de los mensajes repetidos y cada uno se agregan a sus categorìas correspondientes
ahora es posible traducir los mensajes de algún streaming ha  cualquier idioma.
se crea un botón para guardar el historial de los mensajes en un archivo. gracias Johan G
v2.2
se cambia el actualizador. adaptado para VeTube de https://github.com/MCV-Software/TWBlue/tree/next-gen/src/update
se agregan 2 opciones de configuración en la  categoría general del menú configuración
se agrega un atajo para desactivar los sonidos temporalmente: alt shift p.
se separa las teclas en un archivo independiente para en un futuro trabajar en un editor de combinaciones.
(programadores): se quita keyboard para reemplazarla por keyboard_handler.
se cambia la combinación para silenciar un mensaje entrante con sapi5: control p.
agregado atajo para borrar los buffers de búsquedas y el buffer de favoritos:  alt shift d